--- a/src/App.css
+++ b/src/App.css
@@ -190,3 +190,8 @@ word-break: break-word;
   text-decoration: none;
   font-size: small;
 }
+
+.remove-link-style{
+  text-decoration: none;
+  color: tomato;
+}
