--- a/src/pages/ManageWorks/ManageWorks.css
+++ b/src/pages/ManageWorks/ManageWorks.css
@@ -1,6 +1,6 @@
 .mainContainer{
     width: 100%;
-    height: calc(100vh - 50px);
+    min-height: calc(100vh - 50px);
     display: flex;
 }
 
@@ -13,4 +13,26 @@
 .mainContainerRight{
     width: 82%;
     height: 100%;
+}
+
+.accordionSimilarStyle{
+    box-sizing: border-box;
+    --bs-accordion-bg: var(--bs-body-bg);
+    --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
+    --bs-accordion-border-width: var(--bs-border-width);
+    --bs-accordion-border-radius: var(--bs-border-radius);
+    --bs-accordion-inner-border-radius: calc(var(--bs-border-radius) - (var(--bs-border-width)));
+    --bs-accordion-btn-padding-x: 1.25rem;
+    --bs-accordion-btn-padding-y: 1rem;
+    --bs-accordion-btn-color: var(--bs-body-color);
+    --bs-accordion-btn-bg: var(--bs-accordion-bg);
+    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    --bs-accordion-body-padding-x: 1.25rem;
+    --bs-accordion-body-padding-y: 1rem;
+    --bs-accordion-active-color: var(--bs-primary-text-emphasis);
+}
+
+.w100{
+    width: 100%;
+    text-align: left;
 }
