--- a/src/pages/ManageSettings/ManageSetting.css
+++ b/src/pages/ManageSettings/ManageSetting.css
@@ -6,11 +6,11 @@
 
 .mainContainerLeft{
     width: 18%;
-    height: 100%;
+    height: auto;
     border-right: 1px solid lightgray;
 }
 
 .mainContainerRight{
     width: 82%;
-    height: 100%;
+    height: auto;
 }
