setting main page + side bar

--- a/src/components/setting/profile.css
+++ b/src/components/setting/profile.css
@@ -1,10 +1,8 @@
 /* profile.css */
 
 .personalInfo {
-  max-width: 400px;
-  /* margin: 0 auto; */
+  /* max-width: 400px; */
   padding: 20px;
-  /* border: 1px solid #ccc; */
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
