Reverted Changes Success

--- a/src/components/uploadEbook/uploadEbook.css
+++ b/src/components/uploadEbook/uploadEbook.css
@@ -1,4 +1,4 @@
-.videoUploadContainer{
+/* .videoUploadContainer{
     width: 70%;
     margin-left: 15%;
     display: flex;
@@ -24,4 +24,4 @@
 
 .videoUploadContainer>Button{
     background-color: tomato;
-}
+} */
